[project]
name = "avm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph-cli[inmem]>=0.4.28",
    "mediapipe>=0.10.35",
    "openai-whisper>=20250625",
    "pyaudio>=0.2.14",
    "rich>=15.0.0",
    "soundfile>=0.13.1",
    "speechrecognition>=3.16.1",
]
